RESOLVED FIXED32427
[Cairo][Qt] Alpha blending in SVG filters is wrong
https://bugs.webkit.org/show_bug.cgi?id=32427
Summary [Cairo][Qt] Alpha blending in SVG filters is wrong
Dirk Schulze
Reported 2009-12-11 05:21:33 PST
This bug is related to bug 32378 and needs the same fix for Cairo and Qt.
Attachments
correct color spacetransformation SVG Filter for Qt, Cairo (2.34 KB, patch)
2009-12-11 05:31 PST, Dirk Schulze
no flags
Dirk Schulze
Comment 1 2009-12-11 05:31:06 PST
Created attachment 44679 [details] correct color spacetransformation SVG Filter for Qt, Cairo ImageBuffer::platformTransformColorSpace shouldn't transform the alpha channel on sRGB <-> linearRGB on Qt, Cairo.
WebKit Review Bot
Comment 2 2009-12-11 05:31:55 PST
style-queue ran check-webkit-style on attachment 44679 [details] without any errors.
Eric Seidel (no email)
Comment 3 2009-12-11 15:38:13 PST
Comment on attachment 44679 [details] correct color spacetransformation SVG Filter for Qt, Cairo Looks sane. Obviously needs updates to those tests too.
Dirk Schulze
Comment 4 2009-12-12 00:45:55 PST
(In reply to comment #3) > (From update of attachment 44679 [details]) > Looks sane. Obviously needs updates to those tests too. Looks like both ports don't have pixel tests. The regression tests don't need an update.
WebKit Commit Bot
Comment 5 2009-12-12 02:21:07 PST
Comment on attachment 44679 [details] correct color spacetransformation SVG Filter for Qt, Cairo Clearing flags on attachment: 44679 Committed r52049: <http://trac.webkit.org/changeset/52049>
WebKit Commit Bot
Comment 6 2009-12-12 02:21:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.