third_party/WebKit/WebCore/platform/graphics/cairo/ImageBufferCairo.cpp
@@ -133,7 +133,7 @@ void ImageBuffer::platformTransformColorSpace(const Vector<int>& lookUpTable)
             pixelColor = Color(lookUpTable[pixelColor.red()],
                                lookUpTable[pixelColor.green()],
                                lookUpTable[pixelColor.blue()],
-                               lookUpTable[pixelColor.alpha()]);
+                               pixelColor.alpha());
             *pixel = premultipliedARGBFromColor(pixelColor);
         }
     }
