third_party/WebKit/WebCore/platform/graphics/qt/ImageBufferQt.cpp
@@ -115,7 +115,7 @@ void ImageBuffer::platformTransformColorSpace(const Vector<int>& lookUpTable)
             value = qRgba(lookUpTable[qRed(value)],
                           lookUpTable[qGreen(value)],
                           lookUpTable[qBlue(value)],
-                          lookUpTable[qAlpha(value)]);
+                          qAlpha(value));
             image.setPixel(x, y, value);
         }
     }
